redbox-platform.old/base/virtualization/cdi/cdi-uploadproxy-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cdi-uploadproxy
  namespace: cdi
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cdi-uploadproxy.local`)
      kind: Rule
      services:
        - name: cdi-uploadproxy
          port: 443
          scheme: https
          serversTransport: cdi-uploadproxy-transport
